<resources>
    <string name="app_name">Monero Wallet</string>

    <string-array name="menu_titles">
        <item>Dashboard</item>
        <item>Send</item>
        <item>Sign</item>
        <item>Settings</item>
    </string-array>

    <string-array name="mixInValues">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>12</item>
        <item>16</item>
    </string-array>

    <string-array name="priorityValues">
        <item>1x fee</item>
        <item>2x fee</item>
        <item>3x fee</item>
    </string-array>

    <string-array name="networkPref">
        <item>WIFI Only</item>
        <item>Carrier Data</item>
    </string-array>

    <string-array name="networkPrefValue">
        <item>0</item>
        <item>1</item>
    </string-array>



    <string name="nav_item_dashboard_title">Dashboard</string>
    <string name="nav_item_send_title">Send</string>
    <string name="nav_item_sign_title">Sign</string>
    <string name="nav_item_receive_title">Receive</string>
    <string name="nav_item_settings_title">Settings</string>

    <string name="button_generate">Generate</string>
    <string name="title_amount">Amount</string>
    <string name="title_desc">Description</string>
    <string name="title_paymentID">Payment ID</string>
    <string name="title_address">Address</string>
    <string name="title_address_integrated">Integrated address</string>
    <string name="title_priority">Transaction priority</string>
    <string name="title_mixin">Privacy level</string>
    <string name="hint_howmuch">Fee not included</string>
    <string name="hint_address">Address</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_paymentID">(Optional)</string>



    <string name="qr_bitmap">QR image with Payment ID</string>

    <string name="alert_dialog_no_connection_to_daemon">Cant connect to the node. Please check network or node</string>

</resources>
